button animation - part 2

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="text-box">
 				<h3 class="heading-primary">
 					<span class="heading-primary__main"> selftaught </span>
-					<span class="heading-sub"> is how you survise </span>
+					<span class="heading-primary__sub"> is how you survise </span>
 				</h3>
 				<a href="#" class="btn btn-white btn-animated">See our courses</a>
 			</div>
